--- a/organo/src/app/componentes/livro/livro.component.html
+++ b/organo/src/app/componentes/livro/livro.component.html
@@ -1,4 +1,7 @@
 <section>
+  <div class="imagem">
+    <img [src]="livro.imagem" [alt]="livro.titulo">
+  </div>
   <div class="info-livro">
     <h2 class="texto-h2">{{ livro.titulo }}</h2>
     <h3 class="texto-h3">{{ livro.autoria }}</h3>
